--- a/splash/scrapy.cfg
+++ b/splash/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = ScrappyEJ.settings
+default = splash.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = ScrappyEJ
+project = splash
